# youtube-dl-split-chapters

./: README.md  main.py  pyproject.toml
download_youtube_chapters/: main.py  opts.py
tests/: test_download_youtube_chapters.py
