[tool.poetry]
name = "download-youtube-chapters"
version = "0.1.0"
description = ""
authors = ["Arktur <arktur@mailbox.org>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
download-youtube-chapters = 'download_youtube_chapters.main:main'
